14-falco-runtime-security-ebpf.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: falco-ebpf
  namespace: falco-system
  labels:
    app.kubernetes.io/name: falco
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: falco
  template:
    metadata:
      labels:
        app.kubernetes.io/name: falco
    spec:
      serviceAccountName: falco-sa
      hostNetwork: true
      hostPID: true
      containers:
        - name: falco
          image: falcosecurity/falco-no-driver:0.38.1
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          volumeMounts:
            - name: falco-rules
              mountPath: /etc/falco/rules.d
            - name: host-proc
              mountPath: /host/proc
              readOnly: true
            - name: host-sys
              mountPath: /host/sys
              readOnly: true
      volumes:
        - name: falco-rules
          configMap:
            name: falco-custom-rules
        - name: host-proc
          hostPath:
            path: /proc
        - name: host-sys
          hostPath:
            path: /sys
